# claw-solBOT

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  alpha_wallets.txt
docs/: trading.md
ops/: README.md
ops/systemd/: solbot.service
src/: config.rs  domain.rs  engine.rs  execution.rs  journal.rs  jupiter.rs  logger.rs  main.rs  monitoring.rs  notifier.rs  risk.rs  scanner.rs  security.rs  state.rs  time.rs
src/strategy/: mod.rs  momentum.rs
