[package]
name = "solana_infinity_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "rustls-tls"] }
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Solana ecosystem (to be wired once toolchain is installed)
solana-sdk = "2"
solana-client = "2"
solana-transaction-status = "2"
